fix sizing issue on firefox...

--- a/app/assets/stylesheets/modules/dialogs/login_modal.css.scss
+++ b/app/assets/stylesheets/modules/dialogs/login_modal.css.scss
@@ -7,6 +7,7 @@ div#myLoginModal
   
   .modal-body
   {
+    min-width: 250px;
     text-align: center;
     padding: 100px;
     
